// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeTransactionsRowMobile should render (Expired) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-fbeerz"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1vb1527"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Expired
              </span>
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  clock-error.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile should render (Failed) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-fbeerz"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1vb1527"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Failed
              </span>
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  circle-cross.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile should render (Finished) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-fbeerz"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1vb1527"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Finished
              </span>
              <div
                class="text-theme-success-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  circle-check-mark.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile should render (New) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-fbeerz"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1vb1527"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <div
                  class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 -ml-1.5 px-2"
                  data-testid="AmountLabel__hint"
                >
                  <div
                    class="dark:text-white css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg>
                      hint-small.svg
                    </svg>
                  </div>
                </div>
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                New
              </span>
              <div
                class="text-theme-secondary-500 dark:text-theme-secondary-700 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  clock.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile should render (Refunded) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-fbeerz"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1vb1527"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Refunded
              </span>
              <div
                class="text-theme-warning-300 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile should render (Verifying) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-fbeerz"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1vb1527"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Verifying
              </span>
              <div
                class="text-theme-warning-300 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile should render NA if no orderId 1`] = `
<div>
  <tr
    class="group css-1gk67vk"
    data-testid="TableRow"
  >
    <td
      class="flex-col space-y-4 py-4"
      data-testid="TableRow__mobile"
    >
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          ID
        </div>
        <span
          class="text-theme-secondary-700 dark:text-theme-secondary-200"
        >
          NA
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Recipient
        </div>
        <span
          class="font-semibold"
        />
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Timestamp
        </div>
        01.01.2021 12:00 AM
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          From
        </div>
        <div
          class="css-fbeerz"
          color="danger"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              - 1 BTC
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          To
        </div>
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 100 ARK
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Status
        </div>
        <span
          class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
        >
          <span>
            Failed
          </span>
          <div
            class="text-theme-danger-400 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              circle-cross.svg
            </svg>
          </div>
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <button
          class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
          data-testid="TableRemoveButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                trash.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </td>
  </tr>
</div>
`;

exports[`ExchangeTransactionsRowMobile should render transaction provider 1`] = `
<div>
  <tr
    class="group css-1gk67vk"
    data-testid="TableRow"
  >
    <td
      class="flex-col space-y-4 py-4"
      data-testid="TableRow__mobile"
    >
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          ID
        </div>
        <button
          class="link font-semibold"
          type="button"
        >
          <span
            class="css-0"
            data-testid="TruncateMiddle"
          >
            id
          </span>
        </button>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Recipient
        </div>
        <span
          class="font-semibold"
        >
          ChangeNOW
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Timestamp
        </div>
        01.01.2021 12:00 AM
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          From
        </div>
        <div
          class="css-fbeerz"
          color="danger"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              - 1 BTC
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          To
        </div>
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 100 ARK
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Status
        </div>
        <span
          class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
        >
          <span>
            Failed
          </span>
          <div
            class="text-theme-danger-400 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              circle-cross.svg
            </svg>
          </div>
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <button
          class="w-full sm:ml-auto sm:w-auto css-1cp5yjb"
          data-testid="TableRemoveButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                trash.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </td>
  </tr>
  ,
</div>
`;
